Update to 0.2.1.Fix some bug